<resources>
    <string name="app_name">Jon First App</string>
    <string name="edit_message">Enter a message</string>
    <string name="hello_world">Hello World!</string>
    <string name="button_send">Send</string>
    <string name="button_showmsg">Show messages</string>
    <string name="button_hidemsg">Hide messages</string>
    <string name="prev_message">Your message from the last session:</string>
    <string name="no_prev_message">No previous message</string>
    <string name="show_all_messages">Show all messages</string>
    <string name="your_message_history">You message history:</string>
    <string name="sending_message_to">Sending message to:</string>
    <string name="choose_recipient">Choose recipient</string>
    <string name="at_no">" at "</string>
    <string name="enter_message">Please enter a message</string>
    <string name="ok">OK</string>
    <string name="SMSExplanation">You need to grant this app SMS permission in order for it to send a text message.</string>
</resources>
