<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/root_layout_fragment_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Hello world text view -->
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:textSize="40sp"
            android:text="@string/hello_world"/>

        <!-- Country picture -->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:src="@mipmap/country_flag"/>
    </LinearLayout>

    <Button android:id="@+id/button_choose_recipient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_recipient"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Text field to edit message -->
        <EditText android:id="@+id/edit_text_message"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/edit_message"/>

        <!-- Button to send written message -->
        <Button android:id="@+id/button_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_send"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Button to show and hide messages -->
        <Button android:id="@+id/button_showhide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"/>


        <!-- Button to show all messages -->
        <Button android:id="@+id/button_show_all_messages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_all_messages"
            android:layout_weight="0.5"/>


    </LinearLayout>

    <ImageView android:id="@+id/image_view_host"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@mipmap/host"/>

</LinearLayout>